--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ django-extensions==2.2.9
 ipdb==0.13.2
 django-image-cropping==1.3.0
 easy-thumbnails==2.7
+djangorestframework==3.11.0
+Markdown==3.2.1
+django-filter==2.2.0
